# omym

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: AGENTS.md  architecture.md  architecture.rst  file_structure.md  glossary.md  index.rst  module-slimming-plan.md  overview.rst  project_requirements.md  repo-map.md  spec.md  tech_stack.md  tool_flow.md  tool_logic_structure.md  ui_guidelines.md
docs/developer/: index.rst
docs/user/: configuration.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst  usage.rst
omym/: __main__.py  cli.py  config.py
omym/commands/: organize.py  preview.py
omym/core/: album_manager.py  filtering.py  metadata.py  metadata_extractor.py  music_grouper.py  mutagen_types.py  path_components.py  path_generator.py  processor.py  renaming_logic.py  sanitizer.py
omym/db/: dao_albums.py  dao_artist_cache.py  dao_path_components.py  dao_processing_after.py  dao_processing_before.py  db_manager.py  schema.sql
omym/tests/: test_album_manager.py  test_cli.py  test_config.py  test_db.py  test_filtering.py  test_main.py  test_metadata_extractor.py  test_organize.py  test_path_components.py  test_path_generator.py  test_preview.py  test_processor.py  test_renaming_logic.py  test_sanitizer.py
omym/types/: langid_types.pyi  mutagen_types.py
omym/ui/: cli.py
omym/utils/: logger.py
src/omym/: main.py
tests/: test_config.py  test_main.py  test_module_header_schema.py
tests/architecture/: __init__.py  (+1 more)
(+280 files in other folders)
