[project]
name = "omym"
version = "0.1.0"
description = "OMYM (Organize My Music) - A tool to organize your music library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langid>=1.1.6",
    "mutagen>=1.47.0",
    "numpy>=1.26.2",
    "pykakasi>=2.3.0",
    "rich>=13.7.0",
    "six>=1.16.0",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
omym = "omym.main:main"

[tool.setuptools.package-data]
omym = ["db/*.sql"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F401"]