[project]
name = "omym"
version = "0.1.0"
description = "OMYM (Organize My Music) - A tool to organize your music library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langid>=1.1.6",
    "mutagen>=1.47.0",
    "pykakasi>=2.3.0",
    "rich>=13.7.0",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omym"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
omym = "omym.main:main"

[tool.setuptools.package-data]
omym = ["db/*.sql"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F401"]

[tool.pyright]
include = ["omym", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "all"  # Do not change this.
reportMissingImports = false
reportAny = false
reportExplicitAny = false